--- a/styles.css
+++ b/styles.css
@@ -5,151 +5,214 @@
 body {
   background: rgb(79, 46, 90);
   background: linear-gradient(90deg, rgba(79, 46, 90, 1) 15%, rgba(28, 24, 51, 1) 85%);
-  box-sizing: border-box;
-  min-height: 100vh;
+  max-width: 100vw;
+}
+
+.container {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.4fr 1.6fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    'header header'
+    'left right';
+  z-index: 10;
+  overflow-x: hidden;
 }
 
 .header {
-  position: relative;
-  padding-top: 80px;
+  grid-area: header;
+
+  display: flex;
+  justify-content: space-between;
 }
 
-.marvel-icon {
-  position: absolute;
-  margin-left: 100px;
-  left: 0;
+.marvel-logo {
+  width: 16rem;
+  margin: 3rem 0 0 7rem;
 }
 
 .navbar {
-  position: absolute;
-  right: 0;
-  height: 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.navbar ul {
-  display: inline;
-  vertical-align: middle;
-  margin-right: 40px;
+.navlist {
+  display: flex;
+  /* Remove li dots */
+  list-style: none;
+  padding: 0;
+  height: 50px;
+  border-right: white 0.25rem solid;
+  align-items: center;
+  margin-right: 2rem;
 }
 
-.nav-link {
-  display: inline-block;
-  margin-right: 20px;
-
+.navlist a {
+  /* Remove <a> properties */
+  list-style: none;
+  margin: 0;
+  padding: 0;
   color: white;
-  font-weight: 600;
-  font-family: 'Outfit', sans-serif;
-  font-size: 25px;
+  text-decoration: none;
+
+  /* Separate items */
+  margin-right: 2rem;
+
+  /* Font details */
+  font-size: 1.4rem;
 }
 
-.active {
-  font-size: 28px;
-  color: red;
+.navlist a:hover {
+  color: #e90909;
+  font-size: 1.6rem;
 }
 
 .search {
-  display: inline;
-  vertical-align: middle;
-  padding-left: 20px;
-  border-left: 4px solid white;
-  height: 50px;
+  margin-right: 3.8rem;
+  width: 2.2rem;
 }
 
 .user {
-  display: inline;
-  vertical-align: middle;
-  padding: 0 20px;
-  margin-right: 100px;
-}
-
-.marvel-studio {
-  display: block;
-  padding-top: 200px;
-  margin-left: 266px;
-}
-
-.side {
-  width: 50vw;
-  height: 100;
+  margin-right: 9rem;
+  width: 5rem;
 }
 
 .left {
-  padding: 0 0 0 104px;
-}
+  grid-area: left;
+  justify-self: center;
 
-.right {
-  position: absolute;
-  right: 250px;
-  bottom: -100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 7.75rem;
+
+  width: 90%;
 }
 
 .title {
-  margin: 0;
-  font-family: 'Goldman', cursive;
   color: white;
+  font-family: 'Goldman', cursive;
+  /* stroke text */
   -webkit-text-stroke: 1px #e90909;
-  font-size: 90px;
-  font-weight: bold;
-  line-height: 120px;
-  padding-left: 34px;
+  font-size: 6.25rem;
+  margin: 0;
+  line-height: 7.5rem;
+
+  /* media query 1720 */
+  @media (max-width: 1720px) {
+    font-size: 5.5rem;
+    line-height: 6.5rem;
+  }
+
+  /* media query  */
+  @media (max-width: 1440px) {
+    font-size: 4.68rem;
+    line-height: 5.5rem;
+  }
 }
 
 .subtitle {
-  margin: 0;
   font-family: 'Swanky and Moo Moo', cursive;
+  font-size: 4.68rem;
   -webkit-text-stroke: 1px white;
-  font-size: 70px;
-  font-weight: bold;
-  line-height: 100px;
-  padding-left: 166px;
+  margin: 0;
+  line-height: 6.5rem;
+
+  /* media query 1720 */
+  @media (max-width: 1720px) {
+    font-size: 4.1rem;
+    line-height: 5.5rem;
+  }
+
+  /* media query  */
+  @media (max-width: 1440px) {
+    font-size: 3.51rem;
+    line-height: 4.5rem;
+  }
 }
 
 .description {
   font-family: 'Outfit', sans-serif;
+  font-size: 2.18rem;
   color: white;
-  /* width: 80%; */
-  font-size: 35px;
-  line-height: 37px;
-  /* font-weight: 200; */
-}
-
-figure {
   margin: 0;
-  padding: 0;
 
-  display: inline-block;
+  /* media query 1720 */
+  @media (max-width: 1720px) {
+    font-size: 1.9rem;
+  }
+
+  /* media query  */
+  @media (max-width: 1440px) {
+    font-size: 1.64rem;
+  }
 }
 
-.play {
-  vertical-align: middle;
-  margin-right: 38px;
+.actions {
+  display: flex;
+  align-items: center;
+  color: white;
+  width: 100%;
+}
 
-  text-align: left;
+.search {
+  cursor: pointer;
 }
 
 .watch-now {
-  display: inline-block;
-  vertical-align: middle;
-
   font-family: 'Outfit', sans-serif;
-  font-size: 50px;
-  line-height: 60px;
-  color: white;
+  font-size: 3.125rem;
+  margin-left: 3.7rem;
+  margin-right: 4.43rem;
+
+  /* media query 1720 */
+  @media (max-width: 1720px) {
+    font-size: 2.73rem;
+    margin-left: 3.2rem;
+    margin-right: 3.8rem;
+  }
+
+  /* media query  */
+  @media (max-width: 1440px) {
+    font-size: 2.3rem;
+    margin-left: 2.7rem;
+    margin-right: 3.3rem;
+  }
 }
 
 .more-info {
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 38px;
-  height: 65px;
-  width: 245px;
-  background-color: #232342;
-  border-radius: 46px;
-  text-align: center;
-
   font-family: 'Outfit', sans-serif;
-  font-size: 40px;
-  line-height: 50px;
+  font-size: 2.5rem;
+  background: #232342;
+  border: 3px solid rgba(255, 252, 252, 0.82);
+  border-radius: 46px;
   color: white;
-  border: 3px solid white;
+  width: 245px;
+  height: 65px;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.right {
+  position: relative;
+  grid-area: right;
+  min-width: 147%;
+  z-index: 0;
+  /* height: fit-content; */
+}
+
+.spiderman {
+  position: absolute;
+  top: -3rem;
+  left: -18rem;
+  overflow-x: hidden;
+  width: 100%;
+  /* keep image rate */
+  object-fit: cover;
 }
